--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.11.1",
     "gray-matter": "^4.0.3",
     "next": "^14.2.8",
     "pinyin-pro": "^3.24.2",
