--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.1",
     "gray-matter": "^4.0.3",
     "next": "^14.2.8",
